[package]
name = "unorderset"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"